--- a/CPP 20. Pointer to func/CPP 20. Pointer to func.vcxproj.filters
+++ b/CPP 20. Pointer to func/CPP 20. Pointer to func.vcxproj.filters
@@ -15,18 +15,15 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Preprocessor.cpp">
+    <ClCompile Include="pointer to func.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ioarray.h">
+    <ClInclude Include="calcFunctions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="macros.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="MyLanguage.h">
+    <ClInclude Include="otherFunctions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
