--- a/CPP 20. Pointer to functions/CPP 20. Pointer to functions.vcxproj
+++ b/CPP 20. Pointer to functions/CPP 20. Pointer to functions.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{3c9b1e0c-4c4b-4e8a-be89-907111a81259}</ProjectGuid>
-    <RootNamespace>CPP19Preprocessor</RootNamespace>
+    <ProjectGuid>{bfb5f4d6-a504-43b6-bfb9-af8b819f2c2b}</ProjectGuid>
+    <RootNamespace>CPP20Pointertofunctions</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,12 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Preprocessor.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="ioarray.h" />
-    <ClInclude Include="macros.h" />
-    <ClInclude Include="MyLanguage.h" />
+    <ClCompile Include="pointer to func.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
