--- a/CPP 24. Destructor/CPP 24. Destructor.vcxproj
+++ b/CPP 24. Destructor/CPP 24. Destructor.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{f0e546f4-5184-44dc-aafe-e0b80cb4b9ea}</ProjectGuid>
-    <RootNamespace>CPP24Constructor</RootNamespace>
+    <ProjectGuid>{46ce80a5-cea0-4d91-a2dc-bda7a1e778e0}</ProjectGuid>
+    <RootNamespace>CPP24Destructor</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,10 +127,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Source.cpp" />
+    <ClCompile Include="Destructor.cpp" />
+    <ClCompile Include="Some.cpp" />
     <ClCompile Include="Student.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Some.h" />
     <ClInclude Include="Student.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
