--- a/CPP 24. Destructor/CPP 24. Destructor.vcxproj.filters
+++ b/CPP 24. Destructor/CPP 24. Destructor.vcxproj.filters
@@ -15,15 +15,21 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Source.cpp">
+    <ClCompile Include="Destructor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Student.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Some.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Student.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Some.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
