--- a/CPP 24. this parameter/CPP 24. this parameter.vcxproj
+++ b/CPP 24. this parameter/CPP 24. this parameter.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{f0e546f4-5184-44dc-aafe-e0b80cb4b9ea}</ProjectGuid>
-    <RootNamespace>CPP24Constructor</RootNamespace>
+    <ProjectGuid>{6ca1a2ff-04ef-4781-b9bd-bb0d1d0b9980}</ProjectGuid>
+    <RootNamespace>CPP24thisparameter</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,8 +127,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Source.cpp" />
     <ClCompile Include="Student.cpp" />
+    <ClCompile Include="this parameter.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Student.h" />
