--- a/CPP 24. this parameter/CPP 24. this parameter.vcxproj.filters
+++ b/CPP 24. this parameter/CPP 24. this parameter.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Source.cpp">
+    <ClCompile Include="this parameter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Student.cpp">
