--- a/CPP 31. DynamicArray template/CPP 31. DynamicArray template.vcxproj.filters
+++ b/CPP 31. DynamicArray template/CPP 31. DynamicArray template.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Template class.cpp">
+    <ClCompile Include="DynamicArray template.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
