--- a/CPP 32. Stack/CPP 32. Stack.vcxproj
+++ b/CPP 32. Stack/CPP 32. Stack.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{f15fa102-2b9b-4e69-a0b6-5ff92632f73d}</ProjectGuid>
-    <RootNamespace>CPP31LinkedList</RootNamespace>
+    <ProjectGuid>{34517f48-e2e0-44d5-b237-88dc05203235}</ProjectGuid>
+    <RootNamespace>CPP32Stack</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,10 +127,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Linked list.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="LinkedList.h" />
+    <ClCompile Include="Stack realizaton.cpp" />
+    <ClCompile Include="Stack.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
