--- a/CPP 32. Queue/CPP 32. Queue.vcxproj
+++ b/CPP 32. Queue/CPP 32. Queue.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{f15fa102-2b9b-4e69-a0b6-5ff92632f73d}</ProjectGuid>
-    <RootNamespace>CPP31LinkedList</RootNamespace>
+    <ProjectGuid>{e829b665-d350-45b0-b84e-7a7da6e5ca75}</ProjectGuid>
+    <RootNamespace>CPP32Queue</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,10 +127,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Linked list.cpp" />
+    <ClCompile Include="Queue realization.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="LinkedList.h" />
+    <ClInclude Include="Queue.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
