--- a/CPP 32. Stack/CPP 32. Stack.vcxproj.filters
+++ b/CPP 32. Stack/CPP 32. Stack.vcxproj.filters
@@ -15,13 +15,11 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Linked list.cpp">
+    <ClCompile Include="Stack realizaton.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="LinkedList.h">
+    <ClCompile Include="Stack.h">
       <Filter>Header Files</Filter>
-    </ClInclude>
+    </ClCompile>
   </ItemGroup>
 </Project>
